# oaknut-dfs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test_create.py  test_init.py  test_integration.py  test_sectors_view.py
.github/workflows/: publish.yml  tests.yml
docs/: acorn-encoding.md  architecture.md  bbc-disc-formats.md  cli-design.md  dfs-format-spec.md  dsd-architecture-notes.md  format-implementation-review.md  monorepo.md  opus-ddos-volume-architecture.md
docs/manuals/: advaced-disk-user-guide-text.txt  dfs-user-guide.txt
docs/manuals/text/Acorn_ADFS_User_Guide/: full_text.md
docs/manuals/text/Acorn_DiscSystemUGI2/: full_text.md
docs/notes/: MIGRATION.md  REFACTORING_NOTES.md  REFACTORING_PLAN.md  TODO_REMAINING.md
scripts/: README.md.j2  generate_readme.py  renumber_basic.py
src/oaknut_dfs/: __init__.py  acorn_dfs_catalogue.py  acorn_encoding.py  adfs.py  adfs_directory.py  adfs_free_space_map.py  basic.py  boot_option.py  catalog.py  catalogue.py  catalogued_surface.py  cli.py  cli_backup.py  dfs.py  dfs_filesystem.py  disk_image.py  exceptions.py  formats.py  host_bridge.py  sector_image.py  sectors_view.py  surface.py  unified_disc.py  watford_dfs_catalogue.py
tests/: conftest.py  test_01_basic_validation.py  test_02_edge_cases.py  test_03_fragmented.py  test_04_double_sided.py  test_acorn_dfs_catalogue.py  test_acorn_encoding.py  test_adfs.py  test_adfs_access.py  test_adfs_compact.py  test_adfs_directory_serialize.py  test_adfs_directory_title.py  test_adfs_export_import.py  test_adfs_free_space_map_mutate.py  test_adfs_hard_disc.py  test_adfs_mkdir.py  test_adfs_properties.py  test_adfs_rename_cross_dir.py  test_adfs_rename_lock.py  test_adfs_rmdir.py  test_adfs_unlink.py  test_adfs_write.py  test_basic.py  test_beebem_images.py  test_catalog.py  test_catalogue_operations.py  test_catalogued_surface.py  test_create_adfs.py  test_create_adfs_hard_disc.py  test_create_dfs.py  test_dfs.py  test_dfs_advanced.py  test_dfs_export_import.py  test_dfs_filesystem.py  test_dfs_integration.py  test_dfs_path.py  test_dfs_path_new_methods.py  test_disk_image.py  test_exceptions.py  test_game_images.py  (+8 more)
tests/data/: README.md
tests/data/generators/: 01-basic-validation.bas  02-edge-cases.bas  03-fragmented.bas  04-double-sided.bas
tests/data/images/: 01-basic-validation.ssd  02-edge-cases.ssd  03-fragmented.ssd  04-double-sided.dsd
tests/helpers/: adfs_image.py
